fixed curve top and buttom overflow on larger screens

--- a/src/app/home/About/About.module.css
+++ b/src/app/home/About/About.module.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     gap: var(--contentGap);
-    margin-bottom: 5rem;
+    margin-bottom: 12rem;
 }
 
 .text_container{
